fix(#62): make font size consistent on iOS

--- a/src/components/code-block/styles.module.css
+++ b/src/components/code-block/styles.module.css
@@ -4,6 +4,7 @@
   margin: 1.5rem 0;
   font-family: monospace;
   font-size: 1rem;
+  -webkit-text-size-adjust: 100%; /* to keep font size consistent on iOS */
 }
 
 .file-title {
